
Tweak to the get_photo script to avoid ldap connection hanging up.

Removed O'Neill from the dmeoiser becuase it caused problems.

Improved the generate_assessment_columns scrip so it can handle
changes in curriclum structure (ie. bids and pids swapping).

A get_tarif function for the fees lib.

New weekly sheet for printing in the Register.



Version ClaSS-1.0.52 release (2013/08/30)
-------------------------------------------

Changed the statistics page to breakdown nationalities by section.

Added document drop for reports... needs more testing.



Version ClaSS-1.0.51 release (2013/06/30)
-------------------------------------------

New photo sheet of a class printed from the MarkBook.

Some fixes to the new student import in EntryBook.

Improved the lookup for yeargroups to handle September/August split.



Version ClaSS-1.0.50 release (2013/06/22)
-------------------------------------------

The db upgrade applies patches regardless of the debug state. Email
sent to admin with log message.

Experimenting with calculating profile scores for EYFS.

Fix to permissions for pastoral access to reports.

Set a default enrolyear in group_search to avoid blank re-ernol
searches.

Added the mini-photo to register, markbook and report lists.

Fix to the file delete function for icon photos.

New script to list logs of message sent to the parents of an
individual student the InfoBook.

New Admin script to show overall messages statistics and list email
failures for trouble shooting.

Fix to miniphoto js to change books.

Controversial delete student button under the InfoBook's Enrolment
page - limited to students not on the roll.



Version ClaSS-1.0.49 release (2013/06/12)
-------------------------------------------

Added leavingreason as field to the info table, used in the Enrolment
section.

Added session date to print out of absences list.

Tweaked the getYearPerm function to allow admin perm pastoral to have
the same access as office staff.
