@@ -21,6 +21,7 @@ A get_tarif function for the fees lib.
 
 New weekly sheet for printing in the Register.
 
+Make the profile sheet for printing available from the student_list page.
 
 
 Version ClaSS-1.0.52 release (2013/08/30)
